--- a/Forecast/app/src/main/res/values/strings.xml
+++ b/Forecast/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Forecast</string>
     <string name="search_city">Search city</string>
+    <string name="empty_field">Field is empty. Type city name</string>
+    <string name="select_city">SELECT A CITY</string>
 </resources>
