beta version finished

--- a/Forecast/app/src/main/res/values/strings.xml
+++ b/Forecast/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Forecast</string>
     <string name="search_city">Search city</string>
     <string name="empty_field">Field is empty. Type city name</string>
+    <string name="tomorrow">Tomorrow</string>
 </resources>
