--- a/Forecast/app/src/main/res/values/strings.xml
+++ b/Forecast/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="search_city">Search city</string>
     <string name="empty_field">Field is empty. Type city name</string>
     <string name="tomorrow">Tomorrow</string>
+    <string name="search_city_already">Please wait until the search finishes</string>
+    <string name="city_not_found">City not found</string>
 </resources>
